--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,3 +3,6 @@ Style/FrozenStringLiteralComment:
 
 Style/Documentation:
   Enabled: false
+
+Metrics/BlockLength:
+  ExcludedMethods: ['describe', 'context']
